src/scss/components/_body.scss
@use "../abstracts" as *;
@use "../base" as *;
.body {
  width: min(80%, 1300px);
  margin-inline: auto;
  position: relative;
  min-height: calc(100dvh - 8rem);

  &:not(:has(.filter)) {
    padding-top: 4em;
  }

  @include max(medium) {
    width: 95%;
  }
}

.filter {
  @extend .shadow;
  @extend .flex;
  margin-bottom: 1.8em;
  border-radius: 0.5em;
  padding: 1.3em;
  translate: 0 -50%;
  background-color: var(--clr-neutral-50);

  & > div {
    @extend .flex;
    justify-content: start;
    flex-wrap: wrap;
    gap: 2.2em;
  }

  #{&}__box {
    @extend .flex;
    gap: 0.5em;
    align-items: center;
    background-color: var(--clr-neutral-200);
    color: var(--clr-primary-400);
    border-radius: 0.2em 0 0 0.2em;
    padding: 0.3em;
    font-weight: 700;
    position: relative;
  }

  .fa-xmark {
    font-size: 1.1rem;
    cursor: pointer;
    background-color: var(--clr-primary-400);
    color: var(--clr-neutral-100);
    position: absolute;
    right: 0;
    top: 0;
    bottom: 0;
    translate: 100% 0;
    padding-top: 0.4em;
    padding-inline: 0.3em;
    border-radius: 0 0.2em 0.2em 0;

    &:is(:hover, :focus-visible) {
      background-color: var(--clr-neutral-400);
    }
  }

  #{&}__clear {
    @extend .btn;

    &:is(:hover, :focus-visible) {
      background-color: var(--clr-neutral-400);
    }
  }
}

.card {
  @extend .shadow;
  @extend .flex;
  margin-bottom: 2em;
  border-radius: 0.5em;
  padding: 2em;
  background-color: var(--clr-neutral-50);

  &:has(.featured) {
    border-left: 6px solid var(--clr-primary-400);
  }

  #{&}--left {
    @extend .flex;
    flex-grow: 1;
    justify-content: start;
  }

  #{&}__titles {
    @extend .flex;
    justify-content: start;
    gap: 0.7em;
  }

  #{&}__name {
    font-weight: 700;
    color: var(--clr-primary-400);
    font-size: 1.1rem;
  }

  #{&}__role {
    font-size: 1.5rem;

    @include max(medium) {
      font-size: 1.4rem;
    }
  }

  #{&}__extra {
    @extend .flex;
    gap: 0.8em;
    font-weight: 500;
    color: var(--clr-neutral-300);
    justify-content: start;

    .dot {
      width: 0.4em;
      aspect-ratio: 1;
      border-radius: 50%;
      background-color: var(--clr-neutral-300);
    }

    @include max(medium) {
      font-size: 0.9rem;
    }
  }

  #{&}--right {
    @extend .flex;
    flex-wrap: wrap;
    gap: 0.5em;
  }

  @include max(small) {
    flex-direction: column;
    align-items: start;
    position: relative;
    margin-bottom: 4em;

    #{&}--left {
      flex-direction: column;
      padding-top: 1.5em;
    }

    #{&}__img {
      position: absolute;
      top: 0;
      left: 2em;
      translate: 0 -50%;
    }
  }
}

